--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,3 +25,10 @@ jobs:
       
     - name: Test with coverage report
       run: npm coverage
+    
+    - name: Upload coverage report
+      uses: codecov/codecov-action@v3.0.0
+      with:
+        token: ${{ CODECOV_TOKEN }}
+        
+        
