--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,6 +29,6 @@ jobs:
     - name: Upload coverage report
       uses: codecov/codecov-action@v3.0.0
       with:
-        token: ${{ CODECOV_TOKEN }}
+        token: ${{ secrets.CODECOV_TOKEN }}
         
         
