--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
   "private": true,
   "dependencies": {
     "@jest/types": "^27.5.1",
-    "@mui/material": "^5.6.2",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.1.1",
     "@testing-library/user-event": "^13.5.0",
@@ -12,11 +11,13 @@
     "@types/jest": "^27.4.1",
     "@types/node": "^16.11.27",
     "@types/react": "^18.0.5",
+    "@types/react-color": "^3.0.6",
     "@types/react-dom": "^18.0.1",
     "@types/react-redux": "^7.1.24",
     "@types/styled-components": "^5.1.25",
     "color": "^4.2.3",
     "react": "^18.0.0",
+    "react-color": "^2.19.3",
     "react-dom": "^18.0.0",
     "react-redux": "^7.2.8",
     "react-scripts": "5.0.1",
