--- a/package.json
+++ b/package.json
@@ -13,12 +13,15 @@
     "@types/react": "^18.0.5",
     "@types/react-color": "^3.0.6",
     "@types/react-dom": "^18.0.1",
+    "@types/react-icons": "^3.0.0",
     "@types/react-redux": "^7.1.24",
     "@types/styled-components": "^5.1.25",
+    "ahooks": "^3.3.10",
     "color": "^4.2.3",
     "react": "^18.0.0",
     "react-color": "^2.19.3",
     "react-dom": "^18.0.0",
+    "react-icons": "^4.3.1",
     "react-redux": "^7.2.8",
     "react-scripts": "5.0.1",
     "styled-components": "^5.3.5",
