--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react": "^18.0.0",
     "react-color": "^2.19.3",
     "react-dom": "^18.0.0",
+    "react-hotkeys-hook": "^3.4.4",
     "react-icons": "^4.3.1",
     "react-redux": "^7.2.8",
     "react-scripts": "5.0.1",
