--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "@testing-library/react": "^13.1.1",
     "@testing-library/user-event": "^13.5.0",
     "@types/color": "^3.0.3",
-    "@types/jest": "^27.4.1",
+    "@types/jest": "^27.5.0",
     "@types/node": "^16.11.27",
     "@types/react": "^18.0.5",
     "@types/react-color": "^3.0.6",
@@ -18,6 +18,7 @@
     "@types/styled-components": "^5.1.25",
     "ahooks": "^3.3.10",
     "color": "^4.2.3",
+    "jest": "^28.0.3",
     "react": "^18.0.0",
     "react-color": "^2.19.3",
     "react-dom": "^18.0.0",
@@ -26,6 +27,8 @@
     "react-redux": "^7.2.8",
     "react-scripts": "5.0.1",
     "styled-components": "^5.3.5",
+    "testdouble": "^3.16.5",
+    "ts-jest": "^28.0.1",
     "typescript": "^4.6.3",
     "web-vitals": "^2.1.4"
   },
